# WineBar

./: .gitignore  README.md  analysis_options.yaml  pubspec.yaml  rps.yaml
.github/: FUNDING.yml
.github/workflows/: autobuild.yml  build.yml  make-release.yml
assets/: muvm_wrapper.sh
dbus/interfaces/: org.freedesktop.ScreenSaver.xml
lib/: main.dart
lib/blocs/pinned_executable/: pinned_executable_bloc.dart  pinned_executable_state.dart
lib/blocs/pinned_executable_set/: pinned_executable_set_bloc.dart  pinned_executable_set_state.dart
lib/blocs/prefix_creation/: prefix_creation_bloc.dart  prefix_creation_state.dart
lib/blocs/prefix_details/: prefix_details_bloc.dart  prefix_details_state.dart
lib/blocs/prefix_list/: prefix_list_bloc.dart  prefix_list_state.dart
lib/blocs/prefix_settings/: prefix_settings_bloc.dart  prefix_settings_state.dart
lib/blocs/process_output_view/: process_output_view_bloc.dart  process_output_view_state.dart
lib/blocs/special_executable/: special_executable_bloc.dart  special_executable_state.dart
lib/dbus/: org_freedesktop_screensaver.dart
lib/exceptions/: data_dir_not_recognized_exception.dart  extraction_failed_exception.dart  generic_exception.dart  generic_prefix_creation_exception.dart  generic_process_exception.dart  prefix_already_exists_exception.dart  wine_command_failed_exception.dart
lib/models/: archive_type.dart  cached_wine_build_source.dart  pinned_executable.dart  pinned_executable_list_event.dart  pinned_executable_set.dart  prefix_list_event.dart  process_log.dart  process_output.dart  settings_json_file.dart  special_executable_slot.dart  suppressable_warning.dart  wine_arch_warning.dart  wine_build.dart  wine_build_source.dart  wine_build_source_github_project.dart  wine_prefix.dart  wine_prefix_dir_structure.dart  wine_release.dart
lib/repositories/: running_executables_repo.dart  running_pinned_executables_repo.dart  running_pinned_executables_repo_impl.dart  running_special_executables_repo.dart  wine_build_source_repo.dart  wine_build_source_repo_impl.dart
lib/services/: app_settings_service.dart  download_and_extraction_service.dart  download_and_extraction_service_impl.dart  running_wine_processes_tracker.dart  screensaver_inhibition_service.dart  utility_service.dart  wine_process_runner_service.dart  winetricks_download_service.dart  winetricks_download_service_impl.dart
lib/utils/: app_info.dart  cast_or_null.dart  command_line_to_wine_args.dart  compute_digest_of_file_contents.dart  env_vars_to_muvm_args.dart  get_single_child_dir.dart  local_storage_paths.dart  maybe_tell_user_to_finish_running_apps.dart  prefix_descriptor.dart  recursive_delete_and_log_errors.dart  settings_file_helper.dart  settings_json_file.dart  startup_data.dart  wine_installation_descriptor.dart  wine_tasks.dart
lib/widgets/: bouncing_widget.dart  error_message_widget.dart  gesture_recognizer_holder.dart  hi_dpi_scale_selection_widget.dart  pin_executable_button.dart  prefix_creation_dialog.dart  prefix_settings_dialog.dart  process_output_widget.dart  run_process_chip.dart  top_level_widget.dart  warning_widget.dart  wine_prefix_page.dart  wine_prefixes_page.dart  wow64_preference_toggle.dart
linux/: CMakeLists.txt  build-run-and-pin-launcher.cmake  build-win32-apps.cmake
linux/runner/: CMakeLists.txt  my_application.cc  utils.cc  utils.h
linux/write-version-info/: CMakeLists.txt
log-capturing-runner/: .clang-format  CMakeLists.txt
log-capturing-runner/dependencies/: CMakeLists.txt
log-capturing-runner/dependencies/cmocka/: CMakeLists.txt
log-capturing-runner/src/: CMakeLists.txt  FdSetCloexecFlag.c  FdSetCloexecFlag.h  FdSetNonblockFlag.c  FdSetNonblockFlag.h  HeadBuffer.c  HeadBuffer.h  HeadTailBuffer.c  HeadTailBuffer.h  Log.c  Log.h  MinMax.h  RunEventLoop.c  RunEventLoop.h  SpawnProcess.c  SpawnProcess.h  StreamStatus.h  TailBuffer.c  TailBuffer.h  TimespecUtils.c  TimespecUtils.h  log-capturing-runner.c
log-capturing-runner/tests/: CMakeLists.txt  TestHeadBuffer.c  TestHeadTailBuffer.c  TestTailBuffer.c  TestTimespecUtils.c
packaging/resources/AppImage/: AppRun
packaging/resources/common/: wine_bar.desktop  winebar.desktop
packaging/scripts/: build_appimage.sh  download_and_check_sha256.sh
run-and-pin-launcher/: CMakeLists.txt
run-and-pin-launcher/cmake/: mingw-w64-x86.cmake
run-and-pin-launcher/src/: CaseInsensitiveCompare.cpp  CaseInsensitiveCompare.h  CoInitializer.cpp  CommandLineBuilder.cpp  CommandLineBuilder.h  DefaultIconSelector.h  ErrorString.h  EscapeAndQuoteJsonString.h  IconForFile.cpp  IconForLnkFile.cpp  IconForLnkFile.h  IconFromIcoFile.h  IconFromPortableExecutableOrIcoFile.cpp  IconFromPortableExecutableOrIcoFile.h  PickIconGroupResource.cpp  PickIconGroupResource.h  ResourceIconSelector.h  ResourceNameHolder.cpp  RunProcess.cpp  RunProcess.h  ScopeCleanup.h  SignedIndexIconSelector.cpp  ToWindowsFilePath.h  UnixToWindowsFilePath.cpp  UnixToWindowsFilePath.h  WStringRuntimeError.h  WriteIconToPng.cpp  WriteIconToPng.h  WritePinnedExecutableJson.cpp  WritePinnedExecutableJson.h
test/: prefix_creation_dialog_test.dart  prefix_creation_dialog_test.mocks.dart  prefix_list_state_test.dart  prefix_settings_dialog_test.dart  prefix_settings_dialog_test.mocks.dart
win32-apps/: CMakeLists.txt
win32-apps/cmake/: mingw-w64-x86.cmake
win32-apps/src/: CoInitializer.h  DefaultIconSelector.cpp  EnumerateFilesOnDesktop.cpp  EnumerateFilesOnDesktop.h  ErrorString.cpp  EscapeAndQuoteJsonString.cpp  FillPinDirectory.cpp  FillPinDirectory.h  IconForFile.h  IconFromAssociatedApplication.cpp  IconFromAssociatedApplication.h  IconFromIcoFile.cpp  IconFromPortableExecutable.cpp  IconFromPortableExecutable.h  OwnedTypes.h  ResourceNameHolder.h  RunProcess.cpp  RunProcess.h  SignedIndexIconSelector.h  ToWindowsFilePath.cpp  WStringException.h  WritePinJson.cpp  WritePinJson.h  installer-runner.cpp  pin-executable-info-extractor.cpp  run-and-pin-launcher.cpp
